--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "quarto-arena",
   "version": "0.1.0",
   "description": "An online version of Quarto - a fast-paced, two-player strategic board game.",
-  "main": "quarto-router.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node quarto-router.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
